welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:19: error: value a is not a member of Boolean
	if( a==c a!=b){
                 ^greenTicket:22: error: value a is not a member of Boolean
	if( b==c a!=b){
                 ^