welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
	if (eg3(a,b,c)){
		return 20;
	}else{
		if (eg2(a,b,c)){
			return 10;
		}else{
			return 0;
		}
	}
}



def  eg2(a:Int, b:Int, c:Int):Boolean ={
	if( a==b && c!=b){
		return true;
	}
	if( a==c a!=b){
		return true;
	}
	if( b==c a!=b){
		return true;
	}else{
		return false;
	}
}

def eg3(a:Int, b:Int, c:Int):Boolean ={
	if( a==b && a==c && b==c){
		return true;
	}else{
		return false;
	}
}
